test_outputs/connlist/exposure_test_with_anp_1_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			[NP] hello-world/deny-all-app-a // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		Egress (Denied)
			[NP] hello-world/deny-all-app-a // Egress (captured but not selected by any Egress rule - no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		Egress (Denied)
			[NP] hello-world/deny-all-app-a // Egress (captured but not selected by any Egress rule - no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			[NP] hello-world/deny-all-app-a // Ingress (captured but not selected by any Ingress rule - no rules defined)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => hello-world/workload-b[Deployment]
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	[namespace with {conformance-house=slytherin}]/[all pods] : TCP 80
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	[namespace with {conformance-house=slytherin}]/[all pods] : TCP 80
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections
